auto discovery add

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,14 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Smartwebsource\\Admintoolkit\\": "packages/smartwebsource/admintoolkit-laravel/src/"
+            "Smartwebsource\\Admintoolkit\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Smartwebsource\\Admintoolkit\\AdminToolkitServiceProvider"
+            ]
         }
     },
     "require": {}
